# agnes-ai-generation-skill

./: .gitignore  LICENSE  README.md  README_EN.md  SKILL.md  agnes-dev.bat  index.html  package-lock.json  package.json  playwright.config.ts
.github/workflows/: desktop-build.yml
docs/: desktop-app-summary.md  desktop-release-checklist.md
references/: api.md
scripts/: agnes-dev.ps1  agnes_api.py  create_icon.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: ui-smoke.spec.ts
